# thesis

./: .gitignore  extracted_text.txt  pyproject.toml  req.txt  temp_pdf_text.txt  thesis_ch1_extracts.txt
BIME Thesis LaTeX Template/: main.tex  ntusetup.tex
BIME Thesis LaTeX Template/back/: references.bib
Fluorescence-microscope-main/: api_handler.py  workers.py
Reference/BOM/: BOM.xlsx  BOM_markdown.txt
Reference/Fluorescence-microscope-code/: .gitignore  analyze_log.txt  analyze_stack.py  autofocus.py  config.py  hardware_control.py  image_processing.py  index.html  main_app.py  unmix_tensor.npy
Reference/arduino_motor_code/arduino_motor/: arduino_motor.ino
Reference/figure generate code/: .$microscope_software_architecture.drawio.bkp  Lego_setup_brightfield.py  Lego_setup_laser.py  Lego_setup_led.py  autofoucs_curves.py  electronic_diagram.py  epifluorescence.py  gen_stokes_shift.py  image_processing_pipeline.py  jablonski.py  microscope_software_architecture.drawio  morphology.py
Reference/openflexure-colour-correction/: .codespellrc  .coveragerc  .gitignore  .gitlab-ci.yml  README.md  generate_default_tensor.py  pyproject.toml
Reference/openflexure-colour-correction/calibration_data/neopixel_jig/: camera_settings.yaml
Reference/openflexure-colour-correction/openflexure_colour_correction/: __init__.py  __main__.py  calibrate.py  correct.py
Reference/openflexure-colour-correction/tests/: __init__.py  test_cli.py
Reference/pifp code/: alignment.py  reconstruction.py
Thesis_Proposal/: group_figures.py  main.lof  main.lot  main.synctex(busy)  main.tex  ntusetup.tex  ntuthesis.cls
Thesis_Proposal/back/: references.bib
Thesis_Proposal/contents/: ch3_01_03_3d_parts_1.tex  ch3_01_03_3d_parts_2.tex  chapter01.tex  chapter02.tex  chapter03.tex  chapter04.tex  chapter05.tex
Thesis_Proposal/front/: abstract.tex  acknowledgement.tex  denotation.tex
figure generate code/: diffraction.py  epifluorescence.py  fourier_optics_viz.py
